templates/kix_template.yaml
---
# Source: kix/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-kix
  labels:
    helm.sh/chart: kix-0.1.0
    app.kubernetes.io/name: kix
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: kix
    app.kubernetes.io/instance: release-name
---
# Source: kix/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-kix
  labels:
    helm.sh/chart: kix-0.1.0
    app.kubernetes.io/name: kix
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: kix
      app.kubernetes.io/instance: release-name
  template:
    metadata:
      labels:
        app.kubernetes.io/name: kix
        app.kubernetes.io/instance: release-name
    spec:
      serviceAccountName: release-name-kix
      securityContext:
        {}
      containers:
        - name: kix
          securityContext:
            {}
          image: "phntom/kix-static-website:latest"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          resources:
            {}
---
# Source: kix/templates/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: release-name-kix
  labels:
    helm.sh/chart: kix-0.1.0
    app.kubernetes.io/name: kix
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    acme.kubernetes.io/dns: dns_linode_v4
    acme.kubernetes.io/enable: "true"
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  tls:
    - hosts:
        - "kix.co.il"
        - "www.kix.co.il"
      secretName: kix-static-tls
  rules:
    - host: "kix.co.il"
      http:
        paths:
          - path: /blog(/|$)(.*)
            backend:
              serviceName: release-name-kix
              servicePort: 80
---
# Source: kix/templates/tests/test-connection.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "release-name-kix-test-connection"
  labels:
    helm.sh/chart: kix-0.1.0
    app.kubernetes.io/name: kix
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    "helm.sh/hook": test-success
spec:
  containers:
    - name: wget
      image: busybox
      command: ['wget']
      args: ['release-name-kix:80']
  restartPolicy: Never
